[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://InfiniteCanvas/InfiniteCanvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Statusbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Menubar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Toolbar.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Dialogs/UnsavedChangesDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=8]
[ext_resource path="res://UI/Dialogs/AboutDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Dialogs/SettingsDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Dialogs/ExitDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Palette.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InfiniteCanvas" parent="." instance=ExtResource( 2 )]
margin_left = 4.0
margin_right = 4.0

[node name="Menubar" parent="." instance=ExtResource( 4 )]
_main_menu_path = NodePath("../MainMenu")

[node name="Toolbar" parent="." instance=ExtResource( 6 )]
margin_top = 38.0
margin_bottom = 78.0
file_dialog_path = NodePath("../FileDialog")
brush_color_picker_path = NodePath("../BrushColorPickerPopup/PanelContainer/ColorPicker")
background_color_picker_path = NodePath("../BackgroundColorPickerPopup/PanelContainer/ColorPicker")
brush_color_palette_path = NodePath("../BrushColorPickerPopup/Panel/Palette")

[node name="Statusbar" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_bottom = 0.0
rect_scale = Vector2( 1, 1.00112 )

[node name="BrushColorPickerPopup" type="Popup" parent="."]
visible = true
margin_left = 358.216
margin_top = 78.0
margin_right = 851.0
margin_bottom = 505.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="BrushColorPickerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -174.784
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="BrushColorPickerPopup/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 423.0
alignment = 2
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BrushColorPickerPopup"]
margin_left = 313.0
margin_right = 479.0
margin_bottom = 427.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palette" parent="BrushColorPickerPopup/Panel" instance=ExtResource( 12 )]
_default_button_number = 18
_palette_theme = ExtResource( 8 )
_color_picker_path = NodePath("../../PanelContainer/ColorPicker")
_default_palette = "Lorien-Default"

[node name="BackgroundColorPickerPopup" type="Popup" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -317.527
margin_top = 77.0
margin_right = 0.473633
margin_bottom = 501.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="BackgroundColorPickerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="BackgroundColorPickerPopup/PanelContainer"]
margin_left = 456.0
margin_top = 456.0
margin_right = 766.001
margin_bottom = 872.0
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 5 )]
margin_left = 1.0
margin_top = 38.0
margin_right = 151.0
margin_bottom = 138.0
file_dialog_path = NodePath("../FileDialog")

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -216.5
margin_right = 385.0
margin_bottom = 216.5
theme = ExtResource( 8 )
access = 2
filters = PoolStringArray( "*.lorien" )
current_dir = "/home/gurchain/Desktop/Lorien-main/lorien"
current_path = "/home/gurchain/Desktop/Lorien-main/lorien/"
__meta__ = {
"_edit_lock_": true
}

[node name="ExitDialog" parent="." instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -45.0
margin_right = 155.0
margin_bottom = 45.0

[node name="ExportDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -216.5
margin_right = 385.0
margin_bottom = 216.5
theme = ExtResource( 8 )
access = 2
current_dir = "/home/gurchain/Desktop/Lorien-main/lorien"
current_path = "/home/gurchain/Desktop/Lorien-main/lorien/"

[node name="UnsavedChangesDialog" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -45.0
margin_right = 155.0
margin_bottom = 45.0

[node name="AboutDialog" parent="." instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -102.5
margin_right = 225.0
margin_bottom = 102.5

[node name="SettingsDialog" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -150.0
margin_right = 260.0
margin_bottom = 150.0

[node name="GenericAlertDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -35.0
margin_right = 68.5
margin_bottom = 35.0
theme = ExtResource( 8 )
dialog_text = "Generic message. "
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_exited"]
